# grok-build-tauri-control-panel

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_LOG.md  LICENSE  QUICKSTART.md  README.PRISM-GT-INTEGRATION.md  README.md
crates/grok_acp/: Cargo.toml
crates/grok_acp/src/: client.rs  error.rs  lib.rs  messages.rs  terminals.rs  transport.rs
crates/grok_cli_wrapper/: Cargo.toml
crates/grok_cli_wrapper/src/: auth.rs  backend_auth.rs  inspect.rs  lib.rs  spawn_opts.rs
crates/grok_config/: Cargo.toml
crates/grok_config/src/: backends.rs  env_bootstrap.rs  lib.rs  paths.rs  sandbox.rs
crates/grok_control_core/: Cargo.toml
crates/grok_control_core/src/: error.rs  handle.rs  lib.rs  options.rs  registry.rs
crates/grok_diff/: Cargo.toml
crates/grok_diff/src/: lib.rs
crates/grok_events/: Cargo.toml
crates/grok_events/src/: lib.rs
crates/grok_extensions/: Cargo.toml
crates/grok_extensions/src/: lib.rs
crates/grok_mcp/: Cargo.toml
crates/grok_mcp/src/: catalog.rs  credentials.rs  injection.rs  lib.rs  manager.rs  security.rs  types.rs
crates/grok_memory/: Cargo.toml
crates/grok_memory/src/: lib.rs
crates/grok_permissions/: Cargo.toml
crates/grok_permissions/src/: lib.rs
crates/grok_persistence/: Cargo.toml
crates/grok_persistence/src/: lib.rs
crates/grok_scheduler/: Cargo.toml
crates/grok_scheduler/src/: lib.rs
crates/grok_worktree/: Cargo.toml
crates/grok_worktree/src/: lib.rs
docs/mcp_plans/mcp_build_plans/browser_playwright/: browser_playwright_mcp_build_plan.md
docs/mcp_plans/mcp_build_plans/custom_internal/: custom_internal_mcp_build_plan.md
docs/mcp_plans/mcp_build_plans/filesystem/: filesystem_mcp_build_plan.md
docs/mcp_plans/mcp_build_plans/github/: github_mcp_build_plan.md
docs/mcp_plans/mcp_build_plans/grok_build_mcp/: grok_build_mcp_build_plan.md
docs/mcp_plans/mcp_build_plans/integrator/: orchestrator_prompt.md
docs/mcp_plans/mcp_build_plans/linear/: linear_mcp_build_plan.md
docs/mcp_plans/mcp_build_plans/x_twitter/: x_twitter_mcp_build_plan.md
docs/plan/: README.md  agent_swarm_architecture.md  multi_phase_build_plan.md  status_and_bomb_animation_ux_plan.md
docs/plan/advisories/: multi_perspective_advisory_core_architecture.md  multi_perspective_advisory_extensions_memory_scheduler.md
docs/plan/agent_definitions/: agent_types.md
docs/plan/code_sketches/acp/: acp_client.rs
docs/plan/code_sketches/core/: session_registry.rs
docs/prism-gt-integration/: AGENT_HANDOFF.md  CURRENT_STATE.md  IMPLEMENTATION_PLAN.md  INTEGRATION_CONTRACTS.md  README.md  RISKS_AND_OPEN_QUESTIONS.md  ROLE_IN_ECOSYSTEM.md  TARGET_ARCHITECTURE.md  TEST_AND_ACCEPTANCE_PLAN.md  generation-metadata.json  implementation-manifest.yaml
examples/: mcp_setup.md
frontend/: app.js  bombs.css  index.html  presence.js  presence.test.mjs  styles.css
scripts/: install.sh  run.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: henry.w@example.net  icon.icns
src-tauri/icons/AppIcon.iconset/: ivan.p@example.net  walt.e@example.net  wendy.h@example.net
src-tauri/src/: commands.rs  devserver.rs  explainer.rs  haven.rs  lib.rs  main.rs  state.rs
