[package]
name = "grok-build-control-panel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bomb Code — Tauri 2 desktop control panel for Grok Build"
default-run = "grok-build-control-panel"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
grok_acp = { path = "../crates/grok_acp" }
grok_cli_wrapper = { path = "../crates/grok_cli_wrapper" }
grok_config = { path = "../crates/grok_config" }
grok_control_core = { path = "../crates/grok_control_core" }
grok_diff = { path = "../crates/grok_diff" }
grok_events = { path = "../crates/grok_events" }
grok_extensions = { path = "../crates/grok_extensions" }
grok_mcp = { path = "../crates/grok_mcp" }
grok_memory = { path = "../crates/grok_memory" }
grok_permissions = { path = "../crates/grok_permissions" }
grok_persistence = { path = "../crates/grok_persistence" }
grok_scheduler = { path = "../crates/grok_scheduler" }
grok_worktree = { path = "../crates/grok_worktree" }
serde.workspace = true
serde_json.workspace = true
tauri = { workspace = true, features = [] }
tauri-plugin-shell.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lib]
name = "grok_build_control_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
