[package]
name = "grok_acp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent Client Protocol (ACP) client over JSON-RPC stdio for Grok Build"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
grok_events = { path = "../grok_events" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "io-util", "process"] }
