[package]
name = "grok_cli_wrapper"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Typed async wrapper around the Grok Build CLI"

[dependencies]
anyhow.workspace = true
grok_config = { path = "../grok_config" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
