[package]
name = "grok_config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Grok Build configuration discovery and TOML parsing"

[dependencies]
anyhow.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
