[package]
name = "grok_control_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Session registry, agent handles, and multi-session orchestration"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dashmap.workspace = true
grok_acp = { path = "../grok_acp" }
grok_cli_wrapper = { path = "../grok_cli_wrapper" }
grok_config = { path = "../grok_config" }
grok_events = { path = "../grok_events" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
