[package]
name = "grok_diff"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Diff capture and change summary for agent sessions"

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
