[package]
name = "grok_events"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Event bus for session, tool, plan, and system events"

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
