[package]
name = "grok_persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite persistence for crash recovery and session snapshots"

[dependencies]
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
